index.html update

--- a/public/index.html
+++ b/public/index.html
@@ -12,16 +12,16 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.facebook.com/profile.php?id=100006304566851">
-    <meta property="og:title" content="Abhishek's Facebook Profile | Developer Portfolio">
-    <meta property="og:description" content="Connect with me on Facebook for the latest updates, insights, and a glimpse into my journey. Let's stay connected and share our experiences together!">
+    <meta property="og:title" content="Abhishek's Portfolio | Developer Portfolio">
+    <meta property="og:description" content="Connect with me on my Social Media handles for the latest updates, insights, and a glimpse into my journey. Let's stay connected and share our experiences together!">
     <!-- Link to a hosted image -->
     <!-- <meta property="og:image" content=""> -->
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://twitter.com/AbhishekJPS168">
-    <meta property="twitter:title" content="Abhishek's Twitter Profile | Developer Portfolio">
-    <meta property="twitter:description" content="Follow me on Twitter for real-time updates, tech insights, and a dose of inspiration. Let's engage in meaningful conversations and explore the world of technology and more, one tweet at a time!">
+    <meta property="twitter:title" content="Abhishek's Portfolio | Developer Portfolio">
+    <meta property="twitter:description" content="Connect with me on my Social Media handles for the latest updates, insights, and a glimpse into my journey. Let's stay connected and share our experiences together!">
     <!-- Link to a hosted image -->
     <!-- <meta property="twitter:image" content=""> -->
 
